apps/staging/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: pgadmin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pgadmin.christophervestman.com
      secretName: pgadmin-tls
  rules:
    - host: pgadmin.christophervestman.com
      http:
        paths:
          - backend:
              service:
                name: pgadmin
                port:
                  number: 80
            path: /
            pathType: Prefix
